added achecker icon

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <input type="button" class="avanzadas" value="sin" onclick="calculadora.seno()" />
             <input type="button" class="avanzadas" value="cos" onclick="calculadora.coseno()" />
             <input type="button" class="avanzadas" value="tan" onclick="calculadora.tangente()" />
-            <input type="button" class="avanzadas"  value="x^2" onclick="calculadora.cuadrado()" />
-            <input type="button" class="avanzadas"  value="x^y" onclick="calculadora.potencia()" />
+            <input type="button" class="avanzadas" value="x^2" onclick="calculadora.cuadrado()" />
+            <input type="button" class="avanzadas" value="x^y" onclick="calculadora.potencia()" />
             <input type="button" class="avanzadas" value="e^x" onclick="calculadora.exponencial()" />
             <input type="button" class="avanzadas" value="10^x" onclick="calculadora.expBase10()" />
 
@@ -58,7 +58,7 @@
             <input type="button" class="operaciones" value="*" onclick="calculadora.multiplicacion()" />
             <input type="button" class="operaciones" value=")" onclick="calculadora.cerrarParentesis()" />
 
-            
+
             <input type="button" class="avanzadas" value="n!" onclick="calculadora.factorial()" />
             <input type="button" class="digitos" value="1" onclick="calculadora.digito('1')" />
             <input type="button" class="digitos" value="2" onclick="calculadora.digito('2')" />
@@ -81,6 +81,9 @@
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
                 alt="¡CSS Válido!" /></a>
+        <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AAA">
+            <img src="https://achecker.ca/images/icon_W2_aaa.jpg" alt="WCAG 2.0 (Level AAA)" height="32" width="102" />
+        </a>
     </footer>
 </body>
 
