no viewport test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
     <title>Calculadora Científica</title>
     <script src="CalculadoraCientifica.js"></script>
     <link rel="stylesheet" href="CalculadoraCientifica.css" type="text/css">
